--- a/public/locales/fr_ca/common.json
+++ b/public/locales/fr_ca/common.json
@@ -1,3 +1,8 @@
 {
-  "h1": "CA A simple example"
+  "home-title": "Home FR CA",
+  "index-title": "Index FR CA",
+  "title-404": "404",
+  "go-to-home": "Go to Home page",
+  "go-to-index": "Go to Index page",
+  "change-language": "Change language to"
 }
